# memory-allocator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pdf.md  phases.md  plan.md  summary.md
bench/: CMakeLists.txt  alloc_bench.cpp  hft_workload.hpp  metrics.cpp  smoke_bench.cpp
include/memalloc/: align.hpp  allocator.hpp  arena.hpp  concurrent.hpp  memalloc.hpp  slab.hpp  tlsf.hpp
site/: build_pdf.sh  charts.js  export_data.py  index.html  render_math.cjs  styles.css  verify_pdf.py
src/: allocator.cpp  arena.cpp  concurrent.cpp  memalloc.cpp  slab.cpp  tlsf.cpp
tests/: CMakeLists.txt  align_test.cpp  allocator_test.cpp  arena_test.cpp  concurrent_test.cpp  slab_test.cpp  smoke_test.cpp  tlsf_alloc_test.cpp  tlsf_test.cpp
